[tool.poetry]
name = "aula-aovivo-mehdi"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <gui_prado@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
